--- a/webroot/topic 5/exercise2.css
+++ b/webroot/topic 5/exercise2.css
@@ -1,6 +1,7 @@
 body {
 	font-family: Helvetica, sans-serif;
     margin: 0;
+    position: relative;
 }
 
 figure {
@@ -14,6 +15,7 @@ figure {
   }
 
 .titleBar {
+    position: relative;
     float: left;
     width: 97.4%;
     padding: 1em;
@@ -22,7 +24,8 @@ figure {
 
 .navBar header {
     float: left;
-    font-size: 1em;
+    font-size: 2em;
+    padding: 1em;
 }
 
 .navBar {
@@ -32,6 +35,7 @@ figure {
 .navBar ul {
     display: inline-flex;
     font-size: 1em;
+    padding: 1.5em;
 }
 
 .navBar li, .navBarSml li, .listCustom li {
@@ -49,6 +53,7 @@ figure {
 }
 
 .navBar li a{
+    font-size: 1em;
     text-decoration: none;
     color: whitesmoke;
 }
@@ -58,6 +63,7 @@ figure {
     padding: 1em;
     margin: 1em;
     border-radius: 0.25em;
+    position: relative;
 }
 
 .navBarSml li a, .listCustom li {
@@ -74,13 +80,27 @@ figure {
     padding: 1em;
     margin: 1em;
     border-radius: 0.25em;
+    position: relative;
 }
 
 .listCustom h3 {
+    font-size: 1em;
     margin: 0;
     padding: 1em;
     background-color: rgb(129, 46, 46);
     border-radius: 0.25em;
+}
+
+.col21 {
+    display: block;
+    float: left;
+    width: 55%;
+}
+
+.col22 {
+    display: block;
+    width: 45%;
+    float: right;
 }
 
 .cols {
@@ -92,14 +112,33 @@ figure {
 .col {
     float: left;
     padding: 1em;
+    display: block;
 }
 
 .col h3 {
+    font-size: 1.5em;
+    padding: 1em 1em 1em 0;
+}
+
+.col p {
     font-size: 1em;
+    padding: 1em 1em 1em 0;
+}
+
+#aboutMe section{
+    display: flex;
+}
+
+.listCustom h3 {
+    text-align: center;
 }
 
 .col p, .col a {
     font-size: 1em;
+}
+
+.col1 {
+    float: left;
 }
 
 .col1, .col3 {
@@ -107,7 +146,7 @@ figure {
 }
 
 .col2 {
-    width: 40%;
+    width: 45%;
 
 }
 
@@ -122,13 +161,16 @@ figure {
 }
 
 .gold {
+    margin: 0 0 1em 0;
     background-color: rgba(255, 217, 0, 0.5);
 }
 
 .silver {
+    margin: 1em 0;
     background-color: rgba(192, 192, 192, 0.5);
 }
 
 .bronze {
+    margin: 1em 0;
     background-color: rgba(222, 184, 135, 0.5);
 }
