--- a/webroot/topic 5/exercise2.css
+++ b/webroot/topic 5/exercise2.css
@@ -7,6 +7,15 @@ body {
 figure {
     margin: 0;
     width: fit-content;
+    border-radius: 5pt;
+    width: fit-content;
+    text-align: center;
+    font-style: italic;
+    font-size: smaller;
+    text-indent: 0;
+    border: thin silver solid;
+    margin: 0.5em;
+    padding: 0.5em;
 }
 
 .responsive {
