--- a/webroot/miniproject/miniproject.css
+++ b/webroot/miniproject/miniproject.css
@@ -1,33 +1,33 @@
 body {
-	font-family: Helvetica, sans-serif;
-	background: linear-gradient(360deg, rgba(2, 0, 36, 1) 45%, rgba(77, 45, 45, 1) 100%);
-	height: 1000px;
+	font-family: "Calibri Light", sans-serif;
+	background: linear-gradient(360deg, rgba(2, 0, 36, 1) 40%, rgba(77, 45, 45, 1) 100%);
+	height: fit-content;
 }
 
 
-nav .navBar , nav .navBar li, nav {
+nav .nav-bar , nav .nav-bar li, nav {
 	display: inline-flex;
 	width: 100%;
 }
 
-nav .navBar a, nav a {
+nav .nav-bar a, nav a {
 	width: 100%;
 	display: inline-flex;
 	color: whitesmoke;
 }
 
-nav .navBar li a {
+nav .nav-bar li a {
 	text-decoration: none;
 	color: whitesmoke;
-	font-size: 10pt;
+	font-size: 12pt;
 }
 
-nav .navBar li {
+nav .nav-bar li {
 	padding: 10pt;
 	border-radius: 5pt;
 }
 
-nav .navBar li:hover {
+nav .nav-bar li:hover {
 	background-color: rgba(115, 115, 115, 0.15);
 	border-bottom: rgba(220, 48, 82, 0.5) 1pt solid;
 }
@@ -35,18 +35,98 @@ nav .navBar li:hover {
 header h1 {
 	color: #d0cdcd;
 	font-size: 30pt;
+	margin: 1em 2em;
+	text-decoration: underline crimson;
 }
 
-.headerArticle {
-	margin: 50pt;
+header h2 {
+	color: #d0cdcd;
+	font-size: 25pt;
+	font-weight: bolder;
+	margin: 1rem 0;
+}
+
+header h3 {
+	margin: 1rem 0;
+	color: #d0cdcd;
+	font-size: 13pt;
+	font-weight: bolder;
+}
+
+header hr {
+	margin: 1rem 0;
+}
+
+.content-article {
 	padding: 10pt;
 }
 
-.headerArticle header, .headerArticle section {
-	padding: 10pt;
+.content-article header, .content-article section, .content, .content p {
 	color: whitesmoke;
 }
 
-.headerArticle section {
+.content-article section {
 	font-size: 12pt;
 }
+
+.content-article hr {
+	text-align: center;
+	width: 50%;
+	height: 1pt;
+}
+
+.profile-picture {
+	width: 20em;
+}
+
+.profile-picture img {
+	width: 100%;
+	border-radius: 1rem;
+}
+
+.profile-picture figcaption {
+	text-align: center;
+}
+
+.content-container {
+	width: 100%;
+	margin: 0;
+	padding: 1rem!important;
+}
+
+.content-container-1 {
+	margin: 1em 5em 1em 5em;
+	display: flex;
+}
+
+.content {
+	padding: 1rem;
+}
+
+.content p {
+	font-size: 12pt;
+	font-weight: lighter;
+}
+
+.row {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.col {
+	flex-basis: 0;
+	flex-grow: 1;
+	max-width: 100%;
+}
+
+.col-fit {
+	flex-basis: 0;
+	flex-grow: 1;
+	max-width: fit-content;
+}
+
+*, ::after, ::before {
+	box-sizing: border-box;
+}
+
+
