--- a/webroot/miniproject/miniproject.css
+++ b/webroot/miniproject/miniproject.css
@@ -4,6 +4,46 @@ body {
 	height: fit-content;
 }
 
+.top-link {
+	transition: all 0.25s ease-in-out;
+	position: fixed;
+	bottom: 2em;
+	right: 0;
+	display: inline-flex;
+	cursor: pointer;
+	align-items: center;
+	justify-content: center;
+	margin: 0 3em 3em 0;
+	border-radius: 50%;
+	padding: 0.25em;
+	width: 5rem;
+	height: 5rem;
+	background-color: #F8F8F8;
+}
+
+.top-link.show {
+	visibility: visible;
+	opacity: 0.9;
+}
+
+.top-link.hide {
+	visibility: hidden;
+	opacity: 0;
+}
+
+.top-link svg {
+	fill: #000;
+	width: 24px;
+	height: 12px;
+}
+
+.top-link:hover {
+	background-color: #E8E8E8;
+}
+.top-link:hover svg {
+	fill: #000000;
+}
+
 
 nav .nav-bar , nav .nav-bar li, nav {
 	display: inline-flex;
@@ -90,13 +130,19 @@ header hr {
 
 .content-container {
 	width: 100%;
-	margin: 0;
+	margin: 1em 2em 1em 2em;
 	padding: 1rem!important;
+	background-color: rgba(2, 0, 36, 0.25);
+	box-shadow: 0 1rem 2rem rgba(178, 177, 177, 0.05);
+	border-radius: 1rem;
 }
 
 .content-container-1 {
 	margin: 1em 5em 1em 5em;
 	display: flex;
+	background-color: rgba(2, 0, 36, 0.25);
+	box-shadow: 0 1rem 2rem rgba(178, 177, 177, 0.05);
+	border-radius: 1rem;
 }
 
 .content {
@@ -127,6 +173,42 @@ header hr {
 
 *, ::after, ::before {
 	box-sizing: border-box;
+}
+
+.fa {
+	padding: 1rem;
+	width: 3rem;
+	text-align: center;
+	text-decoration: none;
+	margin: 1rem 2rem;
+	border-radius: 1rem;
+	box-shadow: 0 1rem 2rem rgba(178, 177, 177, 0.27);
+
+}
+
+.fa:hover {
+	opacity: 0.7;
+}
+
+.fa-linkedin {
+	background: #007bb5;
+	color: white;
+}
+.fa-instagram {
+	background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
+	color: white;
+}
+
+
+footer {
+	padding: 1rem;
+}
+
+footer i {
+	font-size: 12pt;
+	color: whitesmoke;
+	padding: 2em;
+	text-decoration: underline crimson;
 }
 
 
