--- a/webroot/miniproject/reset.css
+++ b/webroot/miniproject/reset.css
@@ -35,19 +35,12 @@ blockquote, q {
 blockquote:before, blockquote:after,
 q:before, q:after {
 	content: '';
-	content: none;
 }
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
 
-/* Box sizing rules */
-*,
-*::before,
-*::after {
-	box-sizing: border-box;
-}
 
 /* Remove default margin */
 body,
@@ -88,3 +81,8 @@ textarea,
 select {
 	font: inherit;
 }
+
+*, *::before, *::after {
+	box-sizing: border-box;
+}
+
