--- a/webroot/miniproject/miniproject.css
+++ b/webroot/miniproject/miniproject.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-	font-family: "Calibri Light", sans-serif;
+	font-family: "system-ui", sans-serif;
 	background: linear-gradient(360deg, rgba(2, 0, 36, 1) 40%, rgba(77, 45, 45, 1) 100%);
 	height: fit-content;
 }
@@ -91,6 +91,8 @@ header h1 {
 	font-size: 30pt;
 	margin: 1em 2em;
 	text-decoration: underline crimson;
+	font-family: system-ui, sans-serif;
+	font-weight: bolder;
 }
 
 header h2 {
