--- a/webroot/miniproject/miniproject.css
+++ b/webroot/miniproject/miniproject.css
@@ -36,7 +36,6 @@ body {
 }
 
 
-
 .top-link.hide {
 	visibility: hidden;
 	opacity: 0;
@@ -76,7 +75,7 @@ nav .nav-bar li a {
 
 /*noinspection CssInvalidPropertyValue*/
 nav .nav-bar li {
-	padding: 8pt;
+	padding: 5pt;
 	border-radius: 5pt;
 	width: -webkit-fill-available;
 }
@@ -197,33 +196,32 @@ header hr {
 	border-radius: 1em;
 }
 
-.log-submit-box, .blog-submit-box {
+/*noinspection CssInvalidPropertyValue*/
+.button-box {
 	margin: 1em auto;
-	display: block;
-	height: 5em;
-	background-color: rgb(229, 36, 73);
-	border-radius: 1em;
-	border: none;
-	box-shadow: 0 1rem 2rem rgba(175, 175, 175, 0.38);
-	padding: 2em 8em;
-	cursor: pointer;
-	font-size: 12pt;
-}
-
-.log-home-box {
-	margin: 1em auto;
-	display: block;
-	height: 5em;
+	height: fit-content;
 	width: fit-content;
-	background-color: rgba(255, 255, 255, 0.55);
+	color: black;
 	border-radius: 1em;
 	border: none;
-	box-shadow: 0 1rem 2rem rgba(175, 175, 175, 0.38);
-	padding: 2em 8em;
+	padding: 1em 2em;
 	cursor: pointer;
 	font-size: 12pt;
 	text-decoration: none;
-	color: black;
+}
+
+.submit {
+	background-color: rgb(229, 36, 73)!important;
+	box-shadow: 0 1rem 2rem rgba(175, 175, 175, 0.38)!important;
+}
+
+.button-box {
+	background-color: rgba(255, 255, 255, 0.55);
+	box-shadow: 0 1rem 2rem rgba(175, 175, 175, 0.38);
+}
+
+.blog-clear-box {
+	display: inline-block;
 }
 
 .content {
@@ -284,6 +282,12 @@ header hr {
 	background-color: rgb(19 16 68 / 75%);
 	box-shadow: 0 1rem 2rem rgba(178, 177, 177, 0.05);
 	border-radius: 1rem;
+	text-align: center;
+}
+
+.blog-textarea {
+	resize: none;
+	overflow-y: scroll;
 }
 
 
